# backend/routes/boilers.js
@@ -35,6 +35,9 @@ setInterval(async () => {
 router.get('/', async (req, res, next) => {
   // #swagger.tags = ['Boilers']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -59,6 +62,9 @@ router.get('/', async (req, res, next) => {
 router.get('/statuses/all', (req, res) => {
   // #swagger.tags = ['Boilers']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -71,6 +77,9 @@ router.get('/statuses/all', (req, res) => {
 router.post('/', async (req, res, next) => {
   // #swagger.tags = ['Boilers']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -92,6 +101,9 @@ router.post('/', async (req, res, next) => {
 router.post('/:id/status', async (req, res, next) => {
   // #swagger.tags = ['Boilers']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -132,6 +144,9 @@ router.post('/:id/status', async (req, res, next) => {
 router.put('/:id', async (req, res, next) => {
   // #swagger.tags = ['Boilers']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -164,6 +179,9 @@ router.put('/:id', async (req, res, next) => {
 router.delete('/:id', async (req, res, next) => {
   // #swagger.tags = ['Boilers']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
