# backend/routes/suricata.js
@@ -8,6 +8,9 @@ const router = express.Router();
 router.get('/rules', async (req, res, next) => {
   // #swagger.tags = ['Suricata']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -23,6 +26,9 @@ router.get('/rules', async (req, res, next) => {
 router.post('/rules', async (req, res, next) => {
   // #swagger.tags = ['Suricata']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -51,6 +57,9 @@ router.post('/rules', async (req, res, next) => {
 router.put('/rules/:id', async (req, res, next) => {
   // #swagger.tags = ['Suricata']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -87,6 +96,9 @@ router.put('/rules/:id', async (req, res, next) => {
 router.get('/incidents', async (req, res, next) => {
   // #swagger.tags = ['Suricata']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -104,6 +116,9 @@ router.get('/incidents', async (req, res, next) => {
 router.put('/incidents/:id', async (req, res, next) => {
   // #swagger.tags = ['Suricata']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -124,6 +139,9 @@ router.put('/incidents/:id', async (req, res, next) => {
 router.get('/audit-logs', async (req, res, next) => {
   // #swagger.tags = ['Suricata']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -139,6 +157,9 @@ router.get('/audit-logs', async (req, res, next) => {
 router.post('/audit-logs', async (req, res, next) => {
   // #swagger.tags = ['Suricata']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
