# backend/routes/telemetry.js
@@ -9,6 +9,9 @@ const router = express.Router();
 router.get('/', async (req, res, next) => {
   // #swagger.tags = ['Telemetry']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
@@ -42,6 +45,9 @@ router.get('/', async (req, res, next) => {
 router.post('/', async (req, res, next) => {
   // #swagger.tags = ['Telemetry']
   // #swagger.responses[200] = { $ref: '#/components/responses/SuccessOK' }
+  // #swagger.responses[301] = { $ref: '#/components/responses/MovedPermanently' }
+  // #swagger.responses[302] = { $ref: '#/components/responses/Found' }
+  // #swagger.responses[304] = { $ref: '#/components/responses/NotModified' }
   // #swagger.responses[400] = { $ref: '#/components/responses/BadRequest' }
   // #swagger.responses[404] = { $ref: '#/components/responses/NotFound' }
   // #swagger.responses[429] = { $ref: '#/components/responses/TooManyRequests' } 
